# forge

./: .gitignore  CMakeLists.txt  Colours.h  Constants.h  GeneratorTools.h  Makefile  README.md  Types.h  a.out  bf  colours.h  directory_parser.cpp  executor.cpp  forge  gen  gen.cpp  main.cpp  planner.cpp  sol  sol.cpp  test2.out  test3.ans  types.h
gen_tests/: 0.in  1.in  10.in  100.in  101.in  102.in  103.in  104.in  105.in  106.in  107.in  108.in  109.in  11.in  110.in  111.in  112.in  113.in  114.in  115.in  116.in  117.in  118.in  119.in  12.in  120.in  121.in  122.in  123.in  124.in  125.in  126.in  127.in  128.in  129.in  13.in  130.in  131.in  132.in  133.in  (+960 more)
include/: CLI.h  Colours.h  Constants.h  ForgeFunct.h  GeneratorTools.h  InputTools.h  Types.h
include/UtilityHeaders/: ClipboardTools.h  FilesystemInputTools.h  GeneratorTools.h  UserInputTools.h
sandbox/: REVIEW.MD  bf.cpp  diff.tmp  s_test2.out  sol  sol.cpp
src/: GeneratorTools.cpp  cli.cpp  directory_parser.cpp  error_messages.cpp  error_messages.h  executor.cpp  main.cpp  planner.cpp
src/extra code features/: <subl-generator-snippet>.xml  gen.cpp  see failed test confirmation
src/utils/: ClipboardTools.cpp  FilesystemInputTools.cpp  GeneratorTools.cpp  InputTools.cpp  UserInputTools.cpp
toys/: README.md  a.out  directory_toy.cpp  path_dev.cpp  relative_pth.cpp  system_toy.cpp
